--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.2.3",
+    "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-json": "^2.2.2",
+    "gatsby-transformer-remark": "^2.6.9",
     "include-media": "^1.4.9",
     "node-sass": "^4.12.0",
+    "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1"
