--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "dorhan",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "My personal website",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -15,9 +15,11 @@
   "dependencies": {
     "gatsby": "^2.23.3",
     "gatsby-cli": "^2.12.45",
+    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sitemap": "^2.4.5",
@@ -33,7 +35,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
